fixed hero movie div overflowing on very wide screens

--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
@@ -185,6 +185,8 @@
     background-color: black;
     height: 100vh;
     position: relative;
+    overflow: hidden;
+
 
 
 
